# yt-sentiment-analysis

./: .dvcignore  .env.template  .gitignore  Dockerfile  README.md  content.js  data.dvc  dvc.yaml  manifest.json  popup.css  popup.html  popup.js  pyproject.toml  styles.css
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  model_promotion.yml  retrain.yml
docs/: architecture.md
k8s/: configmap-dev.yaml  configmap-prod.yaml  deployment.yaml  secret.yaml  service.yaml
reports/: baseline_distribution.json  drift_report.json  eval_report.json
scripts/: check_drift.py  check_production_model.py  promote_model.py  register_model.py  test_sentiment.py  test_youtube_client.py
src/youtube_sentiment/: __init__.py  main.py
src/youtube_sentiment/services/: sentiment.py  youtube_client.py
src/youtube_sentiment/training/: drift_report.py  eval_report.py  preprocess.py  train.py
tests/: conftest.py  test_api.py  test_sentiment.py  test_youtube_client.py
