[project]
name = "youtube_sentiment_backend"
version = "0.1.0"
description = "YouTube sentiment analysis MLOps project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "torch>=2.2",
    "transformers>=4.39",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_sentiment"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call external services",
]
